--- a/latex/siggraph2013/evaluation.tex
+++ b/latex/siggraph2013/evaluation.tex
@@ -1,4 +1,17 @@
 \section{Evaluation}
 \label{sec:evaluation}
 
-Results from MTurk experiment
+%Results from MTurk experiment
+
+% Motivation for evaluation design
+% May be more general aspects of aesthetics that our model captures, compared to random colorings or color compatibility only
+We conduct an evaluation on Mechanical Turk to gain a better idea of how coloring suggestions from our model compare to ones from simpler models as well as ones from artists.
+To better capture exploratory situations where our model would be used, we generate and present multiple coloring suggestions 
+
+% Experiment Setup
+We first generate a set of coloring suggestions from different sources -- artist colorings, our model, a color-compatibility-only model using the measure by O'Donovan et. al.~\shortcite{ODonovan}, and random colorings-- to be compared in the study. We picked 15 different pattern templates that do not have strong semantic associations and are also outside of our training set. Then, for each pattern template, we generated 4 coloring suggestions per source. For the artist source, we picked the 4 most popular artist colorings on Colourlovers. For our model, we sampled colors using parallel tempering for 2000 iterations and picked the top 4 results using MMR with $\lambda = 0.5$. We similarly sample color-compatibility-only colorings. Finally, for the random source, we pick the first 4 random colorings.
+
+The study interface presents participants with a randomized grid of suggestions for one pattern template at a time. Participants are asked to pick the 4 best colorings and the 4 worst colorings from the grid for one pattern template before moving on to the next template. The order of pattern templates is randomized. Each participant received \$X for evaluating 15 pattern templates. We recruited a total of N participants for the study.
+
+% Experiment Analysis
+We ran repeated-measures ANOVA on the number of suggestions picked as ``best 4'' and ``worst 4'' from each source. The suggestion source was set as a fixed effect and pattern templates and participants were set as random effects. [Results pending]
