Adding the scene recoloring stuff to the paper (finally!)

--- a/latex/siggraph2013/discussion.tex
+++ b/latex/siggraph2013/discussion.tex
@@ -16,7 +16,7 @@ The model as presented has some limitations. In particular, the current model do
 
 % Future work: Templatizing images
 This research opens up several interesting avenues for future work.
-First, the results demonstrated in this paper use patterns from Colourlovers or renderings that can be easily coerced into the same format.~\remark{The latter only makes sense if we get scene recoloring ready in time.} What if any image found `in the wild' could serve as a recolorable pattern template? As a simple first approach, we could extract a color theme from the image, and then quantize the image using the theme's colors~\cite{SharonPaletteExtraction}. Such a simple approach is unlikely to perform well on complex images that use many distinct colors, however. Solving the problem in general requires further research.
+First, the results demonstrated in this paper use patterns from Colourlovers or renderings that can be easily coerced into the same format. What if any image found `in the wild' could serve as a recolorable pattern template? As a simple first approach, we could extract a color theme from the image, and then quantize the image using the theme's colors~\cite{SharonPaletteExtraction}. Such a simple approach is unlikely to perform well on complex images that use many distinct colors, however. Solving the problem in general requires further research.
 
 % Future work: Patterns where color groups are unknown
 Second, this work explores colorizing patterns of the `color-by-numbers' format, in which some pattern regions are constrained to take the same color. What if this assumption were relaxed; that is, what if the color groups in the pattern template are unknown? A system that supported this more general type of pattern template could operate on an even larger set of inputs---essentially any image composed of segments. Implementing such a system would require a more sophisticated model, as well as transdimensional inference techniques to generate sample recolorings when the number of color groups is variable~\cite{ReversibleJumpMCMC}.
