--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -422,3 +422,24 @@ journal = {Biometrika}
   journal={ACM Transactions on Graphics},
   year={2012},
 }
+
+@article{SceneSynth,
+ author = {Fisher, Matthew and Ritchie, Daniel and Savva, Manolis and Funkhouser, Thomas and Hanrahan, Pat},
+ title = {Example-based synthesis of 3D object arrangements},
+ journal = {ACM Trans. Graph.},
+ issue_date = {November 2012},
+ volume = {31},
+ number = {6},
+ month = nov,
+ year = {2012},
+ issn = {0730-0301},
+ pages = {135:1--135:11},
+ articleno = {135},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/2366145.2366154},
+ doi = {10.1145/2366145.2366154},
+ acmid = {2366154},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {3D scenes, automatic layout, data-driven methods, probabilistic modeling, procedural modeling},
+} 
