--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -443,3 +443,14 @@ journal = {Biometrika}
  address = {New York, NY, USA},
  keywords = {3D scenes, automatic layout, data-driven methods, probabilistic modeling, procedural modeling},
 } 
+
+@article{NormalizedDiscreteCompactness,
+  title={Measuring 2-D shape compactness using the contact perimeter},
+  author={Bribiesca, E.},
+  journal={Computers \& Mathematics with Applications},
+  volume={33},
+  number={11},
+  pages={1--9},
+  year={1997},
+  publisher={Elsevier}
+}
