--- a/latex/siggraph2013/appendix.tex
+++ b/latex/siggraph2013/appendix.tex
@@ -1,41 +1,50 @@
 \section*{Appendix}
 \label{sec:appendix}
 
-We list more precise definitions for some of the color properties and features used in our model (Section ~\ref{sec:spatialCompat}).
+We provide more precise definitions for some of the color properties and features used in our model (Section ~\ref{sec:spatialCompat}).
 
-\subsection{Color Properties}
+\subsection*{Color Properties}
+
 \begin{description}
+
 \item[Unary] \hfill
 	\begin{description}
 	  \item[Colorfulness] measures saturation of a color in \lab space: $\frac{\sqrt{a^2+b^2}}{\sqrt{a^2+b^2+L^2}}$
-	  \item[Name Saliency and Name Counts] measure how uniquely a color is named and the distribution of names given to a color, as described in Heer and Stone ~\shortcite{ColorNamingModels}
+	  %\item[Name Saliency and Name Counts] measure how uniquely a color is named and the distribution of names given to a color, as described in Heer and Stone ~\shortcite{ColorNamingModels}
 	\end{description}
+	
 \item[Binary] \hfill
 	\begin{description}
-	  \item[Chroma Difference] A binary color property measuring the squared fraction of perceptual distance due to the chroma channels $\frac{\delta a^2+\delta b^2}{\delta a^2+\delta b^2+\delta L^2}$
+	  \item[Chroma Difference] measures the squared fraction of perceptual distance due to the chroma channels: $\frac{\delta a^2+\delta b^2}{\delta a^2+\delta b^2+\delta L^2}$
 	\end{description}
+	
 \end{description}
-\subsection{Features}
+
+\subsection*{Features}
+
 \begin{description}
+
 \item[Group Features] \hfill
 	\begin{description}
 	  \item[Relative Size] The total area of the group over the image area
 	  \item[Segment Spread] 2D covariance matrix of the group's segment centroids
-	  \item[Segment Size Statistics] the min, mean, max, and standard deviation of the groups' relative segment sizes
+	  \item[Segment Size Statistics] the min, mean, max, and standard deviation of the group's relative segment sizes
 	  \item[Number of Segments] The fraction of segments in the group out of the total number of segments in the image
 	\end{description}
+	
 \item[Segment Features] \hfill
 	\begin{description}
 	  \item[Relative Size] The total area of the segment over the image area
-	  \item[Normalized Discrete Compactness] measures how compactness based on the relationship between the segment's boundary edges and its area ~\cite{NormalizedDiscreteCompactness}
+	  \item[Normalized Discrete Compactness] measures compactness based on the relationship between the segment's boundary edges and its area ~\cite{NormalizedDiscreteCompactness}
 	  \item[Elongation] measures the relative narrowness of a segment according to the width and height of its minimum area bounding box: $1-\frac{boxWidth}{boxHeight}$. A square is the least elongated.
-	  \item[Label] A set of three binary values -- noise, background, and foreground. The noise variable indicates if the segment is a `noise' segment composed of small connected components. The background variable indicates if a segment belongs to a group with the largest connected component and is not `noise'. All other segments belong to the foreground segment.
+	  \item[Label] A set of three binary values: {\emph{Noise}, \emph{Background}, \emph{Foreground}}. The \emph{Noise} variable indicates if the segment is a `noise' segment composed of small connected components. The \emph{Background} variable indicates if a segment belongs to the group with the largest connected component and is not `noise'. All other segments are labeled \emph{Foreground}.
 	  \item[Radial Distance] measures Euclidean distance from the centroid to the center of the image
 	\end{description}
 
 \item[Adjacency Features] \hfill
 	\begin{description}
-	  \item[Enclosure Strengths] are two values which measure how much one neighbor in the adjacency encloses the other and vice versa. Here, enclosure strength of a segment due to a neighbor is defined as the number of pixels of the neighboring segment appearing within a 2-pixel neighborhood outside the segment's boundary, normalized by the area of that neighborhood. Out-of-image pixels are counted as part of the neighborhood area.
-	  \item[Unary Segment Features] The other two adjacency features are the segment feature vectors of the participating segments. For the adjacency feature vector, we put the segment feature vector with the smallest $L_2$ norm first to keep a consistent ordering.
+	  \item[Enclosure Strengths] are two values which measure how much one neighbor in the adjacency encloses the other and vice versa. Enclosure strength is defined as the number of pixels of the neighboring segment appearing within a 2-pixel neighborhood outside the segment's boundary, normalized by the area of that neighborhood. Out-of-image pixels are counted as part of the neighborhood area.
+	  \item[Unary Segment Features] The adjacency feature set also includes the segment feature vectors of the participating segments. We concatenate the two vectors, putting the one with the smallest $L_2$ norm first to enforce a consistent ordering.
 	\end{description}
+	
 \end{description}
