Consistent formatting for the word 'COLOURlovers'

--- a/latex/siggraph2013/introduction.tex
+++ b/latex/siggraph2013/introduction.tex
@@ -6,7 +6,7 @@ From graphic and web design, to fashion and fabrics, to interior design, colored
 
 %% Define our problem domain
 A colored pattern has two parts: a \emph{pattern template}, which is a creative decomposition of space into regions, and a set of \emph{colors} assigned to those regions.
-Additionally, pattern templates often define constraints on which regions must be assigned the same color: childrens' color-by-numbers exercises and the patterns shared on the popular Colourlovers\footnote{http://www.colourlovers.com/} website are two such examples. It is this color-by-numbers pattern format that we explore in this paper.
+Additionally, pattern templates often define constraints on which regions must be assigned the same color: childrens' color-by-numbers exercises and the patterns shared on the popular COLOURlovers\footnote{http://www.colourlovers.com/} website are two such examples. It is this color-by-numbers pattern format that we explore in this paper.
 
 %% Motivation
 While many people can easily distinguish patterns that they like from those they don't, \emph{creating} attractive pattern colorings takes much more time and effort. Because perceived color appearance depends strongly on spatial arrangement, it is difficult for both experienced artists and enthusiasts to anticipate how a specific coloring will look. Thus, the coloring process involves much trial-and-error and color tweaking. Experienced artists often create quick thumbnail colorings to explore the state space before diving into their final work, or use reference images for inspiration~\cite{ColorPaletteTools}.
