--- a/latex/siggraph2013/discussion.tex
+++ b/latex/siggraph2013/discussion.tex
@@ -4,10 +4,12 @@
 % Summarize, restate contributions.
 In this paper, we present a probabilistic approach to automatically coloring 2D patterns. We develop a factor graph model that is trained on example pattern colorings to statistically capture their coloring style and sampled using MCMC to generate a variety of pattern coloring suggestions. We demonstrate the utility of the model on a range of coloring tasks, and a perceptual study showed that the colorings it generates compare favorably to artist-created colorings.
 
-% Discuss limitations, etc.
-However, the model as presented has some limitations. In particular, the current model does not capture any semantic constraints on pattern regions, such as skies being blue or plants being green. This is not always a problem, as even human artists do not always respect these semantics (see the red clouds in Figure~\ref{fig:permutation}b), and patterns often admit many attractive, non-semantic colorings (Figure~\ref{fig:constrainedInference}). However, some patterns appear ugly or confusing when their colorings do not respect semantics, as shown in Figure~\ref{fig:badFlowers}. Labeling regions with semantic tags could address this problem, as the system could search for images on the web using these tags and build up a distribution of expected colors. It might even be possible to predict such labels automatically using sketch classification techniques~\cite{SketchClassification}.~\remark{Also discuss limitations implied by the results of our Turk study?} 
+\remark{(Notes) This research is just scratching the surface. There is still much work to be done to discover what properties of patterns are most important to model. The terms in our model are one reasonable set of properties, but they are not intended to be the final word on the subject. Our probabilistic framework provides a strong and flexible foundation for investigating new terms/properties.}
 
-In addition, the model has little higher-level understanding of objects in the pattern and the roles different pattern elements can play. For example, in the original pattern for Figure~\ref{fig:badFlowers}, color groups are strongly linked to objects. The background is composed of two color groups. In addition, the foreground flowers are composed of petals, petal lineart, and stems. Colorings from our model that do not clearly separate the foreground elements from the background elements, or do not color related groups -- like petal lineart and petals -- similarly tend to be confusing. Higher-level features and factors that consider groups as part of objects, may be needed to capture these effects.~\remark{S:I guess this point is kind of similar to the semantics point, so maybe it could be combined with the semantics discussion}
+% Discuss limitations, etc.
+The model as presented has some limitations. In particular, it does not capture any semantic constraints on pattern regions, such as skies being blue or plants being green. This is not always a problem, as even human artists do not always respect these semantics (see the red clouds in Figure~\ref{fig:permutation}b), and patterns often admit many attractive, non-semantic colorings (Figure~\ref{fig:constrainedInference}). However, some patterns appear ugly or confusing when their colorings do not respect semantics, as shown in Figure~\ref{fig:badFlowers}. Labeling regions with semantic tags could address this problem, as the system could search for images on the web using these tags and build up a distribution of expected colors. It might even be possible to predict such labels automatically using sketch classification techniques~\cite{SketchClassification}.~\remark{Also discuss limitations implied by the results of our Turk study?} 
+
+In addition, the model has little higher-level understanding of objects in the pattern and the roles different pattern elements can play. For example, in the original pattern for Figure~\ref{fig:badFlowers}, color groups are strongly linked to objects. The background is composed of two color groups. In addition, the foreground flowers are composed of petals, petal lineart, and stems. Colorings from our model that do not clearly separate the foreground elements from the background elements, or do not color related groups -- like petal lineart and petals -- similarly tend to be confusing. Higher-level features and factors that consider groups as part of objects, may be needed to capture these effects.~\remark{S:I guess this point is kind of similar to the semantics point, so maybe it could be combined with the semantics discussion.}~\remark{D: It might be better to make a point about `emphasis' here, i.e. we don't know what pattern elements should be emphasized or separated to draw the viewer's eye. Could make some points about saliency here.}
 
 %The spatial terms mostly base color assignments on low-level features of individual and pairwise segments and groups. However, some pattern coloring properties may be better captured by higher-level features that consider groups as part of objects.
 
